// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should render properly with danger variant 1`] = `
<div>
  <div
    class="sc-bdfBwQ bzDDvN"
  >
    <div
      class="sc-gsTCUz kTaMy"
    >
      <div
        class="sc-dlfnbm hCIaCT"
      >
        Title
      </div>
    </div>
    <div
      class="sc-hKgILt hPNfeQ"
    >
      <div
        class="sc-eCssSg kmlyBG"
      >
        Message
      </div>
    </div>
    <div
      class="sc-jSgupP gcdruo"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with info variant 1`] = `
<div>
  <div
    class="sc-bdfBwQ bzDDvN"
  >
    <div
      class="sc-gsTCUz kTaMy"
    >
      <div
        class="sc-dlfnbm hCIaCT"
      >
        Title
      </div>
    </div>
    <div
      class="sc-hKgILt hPNfeQ"
    >
      <div
        class="sc-eCssSg kmlyBG"
      >
        Message
      </div>
    </div>
    <div
      class="sc-jSgupP oHkxX"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with success variant 1`] = `
<div>
  <div
    class="sc-bdfBwQ bzDDvN"
  >
    <div
      class="sc-gsTCUz kTaMy"
    >
      <div
        class="sc-dlfnbm hCIaCT"
      >
        Title
      </div>
    </div>
    <div
      class="sc-hKgILt hPNfeQ"
    >
      <div
        class="sc-eCssSg kmlyBG"
      >
        Message
      </div>
    </div>
    <div
      class="sc-jSgupP jMXQTc"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with warning variant 1`] = `
<div>
  <div
    class="sc-bdfBwQ bzDDvN"
  >
    <div
      class="sc-gsTCUz kTaMy"
    >
      <div
        class="sc-dlfnbm hCIaCT"
      >
        Title
      </div>
    </div>
    <div
      class="sc-hKgILt hPNfeQ"
    >
      <div
        class="sc-eCssSg kmlyBG"
      >
        Message
      </div>
    </div>
    <div
      class="sc-jSgupP kCtqeW"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render title and message text 1`] = `
<div>
  <div
    class="sc-bdfBwQ bzDDvN"
  >
    <div
      class="sc-gsTCUz kTaMy"
    >
      <div
        class="sc-dlfnbm hCIaCT"
      >
        Title
      </div>
    </div>
    <div
      class="sc-hKgILt hPNfeQ"
    >
      <div
        class="sc-eCssSg kmlyBG"
      >
        Message
      </div>
    </div>
    <div
      class="sc-jSgupP jMXQTc"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;
